test/analyze/type_check/trait_object/incorrect_args_arity_error.myte
module test

trait SingleArg<T> {}

fun test(
  // Success
  x1: trait SingleArg<Int>,
  // Failure
  x2: trait SingleArg,
  x3: trait SingleArg<Int, Int>,
) {}

fun main() {}